[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/GUI/SystemObjectsGUI.gd" type="Script" id=1]

[node name="SystemObjectsGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilterEdit" type="LineEdit" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.658824 )
margin_right = 1696.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Filter tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectsTree" type="Tree" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.658824 )
margin_top = 28.0
margin_right = 1696.0
margin_bottom = 954.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="text_changed" from="VBoxContainer/FilterEdit" to="." method="_on_FilterEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/ObjectsTree" to="." method="_on_ObjectsTree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/ObjectsTree" to="." method="_on_ObjectsTree_nothing_selected"]
